src/test/rustdoc-ui/intra-links-warning.stderr
ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Foo::baz: Shortcut
warning: cannot resolve `Foo::baz` as a path to an item or module
  --> $DIR/intra-links-warning.rs:3:23
   |
LL |        //! Test with [Foo::baz], [Bar::foo], ...
   |                       ^^^^^^^^ unresolved intra-doc link
   |
   = note: #[warn(intra_doc_link_resolution_failure)] on by default
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |        //! Test with \[Foo::baz\], [Bar::foo], ...
   |                      ^^        ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Bar::foo: Shortcut
warning: cannot resolve `Bar::foo` as a path to an item or module
  --> $DIR/intra-links-warning.rs:3:35
   |
LL |        //! Test with [Foo::baz], [Bar::foo], ...
   |                                   ^^^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |        //! Test with [Foo::baz], \[Bar::foo\], ...
   |                                  ^^        ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Uniooon::X: Shortcut
warning: cannot resolve `Uniooon::X` as a path to an item or module
  --> $DIR/intra-links-warning.rs:4:13
   |
LL |      //! , [Uniooon::X] and [Qux::Z].
   |             ^^^^^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |      //! , \[Uniooon::X\] and [Qux::Z].
   |            ^^          ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Qux::Z: Shortcut
warning: cannot resolve `Qux::Z` as a path to an item or module
  --> $DIR/intra-links-warning.rs:4:30
   |
LL |      //! , [Uniooon::X] and [Qux::Z].
   |                              ^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |      //! , [Uniooon::X] and \[Qux::Z\].
   |                             ^^      ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Uniooon::X: Shortcut
warning: cannot resolve `Uniooon::X` as a path to an item or module
  --> $DIR/intra-links-warning.rs:6:14
   |
LL |       //! , [Uniooon::X] and [Qux::Z].
   |              ^^^^^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |       //! , \[Uniooon::X\] and [Qux::Z].
   |             ^^          ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Qux::Z: Shortcut
warning: cannot resolve `Qux::Z` as a path to an item or module
  --> $DIR/intra-links-warning.rs:6:31
   |
LL |       //! , [Uniooon::X] and [Qux::Z].
   |                               ^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |       //! , [Uniooon::X] and \[Qux::Z\].
   |                              ^^      ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: Qux:Y: Shortcut
warning: cannot resolve `Qux:Y` as a path to an item or module
  --> $DIR/intra-links-warning.rs:8:13
   |
LL |        /// [Qux:Y]
   |             ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |        /// \[Qux:Y\]
   |            ^^     ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:51:30
   |
LL |  * time to introduce a link [error]*/
   |                              ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |  * time to introduce a link \[error\]*/
   |                             ^^     ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:57:30
   |
LL |  * time to introduce a link [error]
   |                              ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |  * time to introduce a link \[error\]
   |                             ^^     ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:61:1
   |
LL | #[doc = "single line [error]"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the link appears in this line:
           
           single line [error]
                        ^^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:64:1
   |
LL | #[doc = "single line with \"escaping\" [error]"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the link appears in this line:
           
           single line with "escaping" [error]
                                        ^^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:67:1
   |
LL | / /// Item docs.
LL | | #[doc="Hello there!"]
LL | | /// [error]
   | |___________^
   |
   = note: the link appears in this line:
           
           [error]
            ^^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error1: Shortcut
warning: cannot resolve `error1` as a path to an item or module
  --> $DIR/intra-links-warning.rs:73:11
   |
LL | /// docs [error1]
   |           ^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// docs \[error1\]
   |          ^^      ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error2: Shortcut
warning: cannot resolve `error2` as a path to an item or module
  --> $DIR/intra-links-warning.rs:75:11
   |
LL | /// docs [error2]
   |           ^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// docs \[error2\]
   |          ^^      ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Inline
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:79:14
   |
LL | /// [inline](error)
   |              ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Reference
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:84:12
   |
LL | /// [ref]: error
   |            ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Collapsed
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:85:18
   |
LL | /// [collapsed]: error
   |                  ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning.rs:86:17
   |
LL | /// [shortcut]: error
   |                 ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// [shortcut]:\[error\]pub struct G;
   |                ^^     ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: BarA: Shortcut
warning: cannot resolve `BarA` as a path to an item or module
  --> $DIR/intra-links-warning.rs:14:10
   |
LL | /// bar [BarA] bar
   |          ^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// bar \[BarA\] bar
   |         ^^    ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: BarB: Shortcut
warning: cannot resolve `BarB` as a path to an item or module
  --> $DIR/intra-links-warning.rs:20:9
   |
LL |  * bar [BarB] bar
   |         ^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |  * bar \[BarB\] bar
   |        ^^    ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: BarC: Shortcut
warning: cannot resolve `BarC` as a path to an item or module
  --> $DIR/intra-links-warning.rs:27:6
   |
LL | bar [BarC] bar
   |      ^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | bar \[BarC\] bar
   |     ^^    ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: BarD: Shortcut
warning: cannot resolve `BarD` as a path to an item or module
  --> $DIR/intra-links-warning.rs:38:1
   |
LL | #[doc = "Foo\nbar [BarD] bar\nbaz"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the link appears in this line:
           
           bar [BarD] bar
                ^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: BarF: Shortcut
warning: cannot resolve `BarF` as a path to an item or module
  --> $DIR/intra-links-warning.rs:43:9
   |
LL |         #[doc = $f]
   |         ^^^^^^^^^^^
...
LL | f!("Foo\nbar [BarF] bar\nbaz");
   | ------------------------------- in this macro invocation
   |
   = note: the link appears in this line:
           
           bar [BarF] bar
                ^^^^
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`

